--- a/OhmLab_FUHCM_BE/BusinessLayer/BusinessLayer.csproj
+++ b/OhmLab_FUHCM_BE/BusinessLayer/BusinessLayer.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="QRCoder" Version="1.4.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
   </ItemGroup>
 
