--- a/OhmLab_FUHCM_BE/DataLayer/DataLayer.csproj
+++ b/OhmLab_FUHCM_BE/DataLayer/DataLayer.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.7" />
     <PackageReference Include="X.PagedList" Version="10.5.7" />
   </ItemGroup>
 
